[package]
name = "orm-rs"
version = "0.0.0"
edition = "2018"
description = "a orm crate"
authors = ["sanmu <hdy9515@dingtalk.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
serde_json = "1.0.64"
regex = "1.5.4"
